--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "mongodb": "^3.5.8",
     "mongoose": "^5.9.15"
   }
 }
