--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "author": "HarshBoricha",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "mongodb": "^3.5.8",
-    "mongoose": "^5.9.15"
+    "mongoose": "^5.9.15",
+    "prettier": "^2.0.5"
   }
 }
